--- a/index.html
+++ b/index.html
@@ -8,27 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark fancynav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html"><b>ERICA</b></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="bio.html">Biography</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cat.html">Pictures of my Cats</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="calendar.html">Calendar</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="resume.html">Resume</a>
-      </li>
+    <a href="#"><img src="Product.jpeg" alt="Monogram" width="200" height="200"><br></a>
+    <ul>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact Me</a></li>
     </ul>
-  </nav>
-  <center><img src="Product.jpeg" alt="Monogram" width="650" height="650"></center><br>
-  <footer>&copy;2018</footer>
+  <footer>&copy;May 2019</footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
