--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <a href="index.html"><img src="Product.jpeg" alt="Monogram" width="200" height="200"><br></a>
+    <nav>
     <ul>
       <li><a href="about.html">About Me</a></li>
       <li><a href="resume.html">Resume</a></li>
       <li><a href="projects.html">Projects</a></li>
-      <li class="active-link"><a href="#">Contact Me</a></li>
+      <li><a class="active-link" href="#">Contact Me</a></li>
     </ul>
+    </nav>
   <footer>&copy;May 2019</footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
