--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          1 of 3
-        </div>
-        <div class="col-6">
-          2 of 3 (wider)
-        </div>
-        <div class="col">
-          3 of 3
-      </div>
-    </div>
-    <a href="#"><img src="Product.jpeg" alt="Monogram" width="200" height="200"><br></a>
+          <a href="#"><img src="Product.jpeg" alt="Monogram" width="200px" height="200px"><br></a>
     <nav>
       <ul>
           <li><a href="about.html">About Me</a></li>
@@ -29,7 +20,18 @@
           <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
-  <footer>&copy;May 2019</footer>
+        </div>
+        <div class="col-6">
+          2 of 3 (wider)
+        </div>
+        <div class="col">
+          3 of 3
+      </div>
+    </div>
+    
+  <!--
+    <footer>&copy;May 2019</footer>
+  -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
