--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Erica's site!</title>
-    <link rel="icon" href="e.PNG">
+    <link rel="icon" href="monogramframes_88_676_e.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body background="pretty.png" style="background-size: cover;">
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-          <a class="navbar-brand" href="#">Erica Bertolozzi</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand">Erica Bertolozzi</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -18,24 +18,24 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#"><i>Home</i></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About Me</a>
+                  <a class="nav-link" href="about.html"><b>About Me</b></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="resume.html">Resume</a>
+                  <a class="nav-link" href="resume.html"><b>Resume</b></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projects</a>
+                  <a class="nav-link" href="projects.html"><b>Projects</b></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Me</a>
+                  <a class="nav-link" href="contact.html"><b>Contact Me</b></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" style="background-color: navy;" type="submit">Search</button>
+              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
       </div>
     </nav>
