--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Erica</title>
-    <link rel="icon" href="monogramframes_88_676_e.png">
+    <link rel="icon" href="monogramframes_85_676_e.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body background="pretty.png" style="background-size: cover;">
+  <body background="Low-Poly Backgrounds (2).JPG" style="background-size: cover;">
     <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="#">Erica Bertolozzi</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
