Finally picked an icon I like

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Erica's Resume</title>
-    <link rel="icon" href="monogramframes_85_676_e.png">
+    <link rel="icon" href="monogramframes_84_676_e.png">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="about.html"><b>About Me</b></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="r#"><i>Resume</i></a>
+                  <a class="nav-link" href="#"><i>Resume</i></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html"><b>Projects</b></a>
