new navbar idea

--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body background="Low-Poly Backgrounds (2).JPG" style="background-size: cover;">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"><i>Home</i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html"><b>About Me</b></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="resume.html"><b>Resume</b></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html"><b>Projects</b></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html"><b>Contact Me</b></a>
+            </li>
+          </ul>
+      </div>
+      <div class="mx-auto order-0">
+          <a class="navbar-brand mx-auto" href="#">Erica Bertolozzi</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+      </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Facebook</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Instagram</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">LinkedIn</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+  <!----
     <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand">Erica Bertolozzi</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,28 +58,10 @@
         
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#"><i>Home</i></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"><b>About Me</b></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="resume.html"><b>Resume</b></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="projects.html"><b>Projects</b></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html"><b>Contact Me</b></a>
-                </li>
+              
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
       </div>
-    </nav>
+    </nav>-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
