--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
+    this looks so bad
     <nav class=" navbar navbar-fixed-top navbar-light bg-faded" role = "navigation">
       <button class="navbar-toggler hidden-sm-up" data-toggle='collapse' data-target='#CollapsedElements'>
         &#9776;
